--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gitbook-plugin-theme-default",
-  "description": "Default theme for GitBook",
+  "name": "@gitbook-ng/gitbook-plugin-theme-default",
+  "description": "Default theme for @gitbook-ng/gitbook",
   "main": "./index.js",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "engines": {
     "gitbook": ">=3.0.0"
   },
@@ -14,7 +14,7 @@
     "preboot": "git+https://github.com/mdo/preboot.git#4aab4edd85f076d50609cbe28e4fe66cc0771701",
     "gitbook-logos": "git+https://github.com/GitbookIO/logos.git#2.0.2",
     "gitbook-markdown-css": "1.0.1",
-    "jquery": "3.1.1",
+    "jquery": "^3.4.1",
     "less": "2.7.1",
     "less-plugin-clean-css": "1.5.1",
     "mousetrap": "1.6.0",
@@ -25,12 +25,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/GitbookIO/theme-default.git"
+    "url": "https://github.com/gitbook-ng/theme-default.git"
   },
-  "author": "FriendCode Inc. <contact@gitbook.com>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/GitbookIO/theme-default/issues"
+    "url": "https://github.com/gitbook-ng/theme-default/issues"
   },
   "contributors": [
     {
